# rotary-phone

SQLAlchemy/: alembic.ini  my_select.py  pyproject.toml  requirements.txt  seed.py
SQLAlchemy/alembic/: env.py
SQLAlchemy/alembic/versions/: 494f55c5ff89_initial_migration.py
SQLAlchemy/conf/: db.py  models.py
project/: Dockerfile  docker-compose.yml  wait-for-it.sh
project/quotes_app/: apps.py  urls.py  views.py
project/quotes_app/migrations/: 0001_initial.py
project/quotes_app/models/: __init__.py  author_models.py  quote_models.py
project/quotes_app/templates/ quotes/: base.html
project/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  author_detail.html  authors.html  login.html  quotes.html  register.html
project/quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
