[tool.poetry]
name = "SQLAlchemy"
version = "0.1.0"
description = "A project for managing student data"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.36"
Faker = "^18.3.1"
psycopg2-binary = "^2.9.6"
alembic = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
